--- a/build.gradle
+++ b/build.gradle
@@ -935,6 +935,9 @@ def calculateVersion() {
 
   if (project.hasProperty('version') && (project.version =~ calVerPattern)) {
     return "${project.version}"
+  } else if (project.hasProperty('versionprefix') && (project.versionprefix =~ calVerPattern)) {
+    def gitDetails = getGitCommitDetails(7) // Adjust length as needed
+    return "${project.versionprefix}-${gitDetails.hash}"
   } else {
     // If no version is supplied or it doesn't match the semantic versioning, calculate from git
     println("Generating project version as supplied is version not semver: ${project.version}")
