--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,12 @@ org.gradle.welcome=never
 # version=24.5.6-acme
 # versionappendcommit=true
 
+test.maxParallelForks = 1
+test.forkEvery = 100
+
+
 # Set exports/opens flags required by Google Java Format and ErrorProne plugins. (JEP-396)
-org.gradle.jvmargs=-Xmx4g \
+org.gradle.jvmargs=-Xmx3g \
 --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
 --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
 --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
@@ -19,3 +23,4 @@ org.gradle.jvmargs=-Xmx4g \
 --add-opens jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
 # Could be moved to sonar properties after https://sonarsource.atlassian.net/browse/SONARGRADL-134
 systemProp.sonar.gradle.skipCompile=true
+#sonar.gradle.skipCompile=true
